@@ -1,5 +1,10 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2014-03-09 ede
+  * beautify the logo splash
+    jre 1.7+ - with transparency
+    older jre - light gradient to the lnf's default background color
+
 2014-03-02 ede
   * add RAM size detection to mac/linux start scripts
     - uses either 80% or size-1GiB, whichever is bigger
